--- a/index.css
+++ b/index.css
@@ -193,6 +193,8 @@ header .mynavbar .mynavlist .mynav-item#item1 {
     display: flex;
 	flex-direction: row;
 	transition: box-shadow ease-in-out 0.1s;
+    overflow: scroll;
+    
 }
 
 
